<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, HomeActivity!</string>
    <string name="app_name">TeaTime</string>
    <string name="new_game">New Game</string>
    <string name="quit">Quit</string>
    <string name="population">Population</string>
    <string name="food">Food</string>
    <string name="adults">Adults</string>
    <string name="gatherer_tech">Gatherer Tech</string>
    <string name="hunter_tech">Hunter tech</string>
    <string name="gatherers">Gatherers</string>
    <string name="hunters">Hunters</string>
    <string name="food_gathered">Food from gathering sources</string>
    <string name="food_hunted">Food from hunting</string>
    <string name="starving_population">Starving Population</string>
    <string name="births">Births</string>
    <string name="deaths">Deaths</string>
    <string name="expected_population_growth">Expected Population Growth</string>
</resources>
