<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <Button 
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_game"
        android:text="@string/new_game"
        android:drawableRight="@drawable/new_game"
        android:layout_gravity="center_horizontal" />
    
    <Button 
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:drawableRight="@drawable/quit"
        android:layout_gravity="center_horizontal" />
</LinearLayout>